--- a/404.html
+++ b/404.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; URL=./index.html">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Not Found</title>
+    <script>
+        window.location.href = '/Friendsrate2.0/';
+    </script>
 </head>
-<body></body>
+<body>
+</body>
 </html>
